--- a/src/app/modules/admin/dashboards/generate-post/edit-post/edit-post.component.html
+++ b/src/app/modules/admin/dashboards/generate-post/edit-post/edit-post.component.html
@@ -1,9 +1,10 @@
 <div class="flex w-full flex-auto flex-col bg-gray-100 dark:bg-gray-900">
+  <!-- Container for the canva -->
   <div class="mx-auto w-full max-w-7xl p-6 md:p-8">
     <h2 class="mb-8 text-3xl font-bold text-gray-900 dark:text-white">
       Modifier le <span class="text-indigo-500 dark:text-indigo-400">post social</span>
     </h2>
-    
+
     <div class="bg-white dark:bg-gray-800 shadow-lg rounded-lg p-6">
       <div class="toolbar mb-4">
         <button mat-raised-button color="primary" class="mr-2" (click)="addImage()">
