--- a/src/app/modules/admin/pages/profile/profile.component.html
+++ b/src/app/modules/admin/pages/profile/profile.component.html
@@ -655,7 +655,7 @@
         <!-- Column -->
         <div class="flex flex-col items-start">
             <!-- Create Post -->
-            <fuse-card class="flex w-full max-w-140 flex-col p-6 pb-6 sm:p-8">
+            <!-- <fuse-card class="flex w-full max-w-140 flex-col p-6 pb-6 sm:p-8">
                 <div class="text-xl font-semibold">Envoyez nous un message! </div>
                 <div class="mt-8 flex flex-col items-start sm:flex-row">
                     <div class="mb-6 flex items-center sm:mb-0">
@@ -668,7 +668,7 @@
                             cdkTextareaAutosize></textarea>
                     </mat-form-field>
                 </div>
-                <!-- <div class="-mx-3 mt-6 flex items-center sm:mt-8">
+                <div class="-mx-3 mt-6 flex items-center sm:mt-8">
                     <button class="mr-1 px-3" mat-button>
                         <mat-icon
                             class="icon-size-5"
@@ -747,8 +747,8 @@
                             </span>
                         </button>
                     </mat-menu>
-                </div> -->
-            </fuse-card>
+                </div> 
+            </fuse-card> -->
 
             <!-- Post 1 -->
             <fuse-card class="mt-8 flex w-full max-w-140 flex-col" #expandableCard02="fuseCard">
