--- a/src/app/modules/admin/dashboards/commandes/commandes.component.html
+++ b/src/app/modules/admin/dashboards/commandes/commandes.component.html
@@ -9,7 +9,7 @@
                         <div class="truncate text-lg font-medium leading-6 tracking-tight">
                             Solde
                         </div>
-                        <div class="-mr-3 -mt-2 ml-2">
+                        <!-- <div class="-mr-3 -mt-2 ml-2">
                             <button mat-icon-button [matMenuTriggerFor]="summaryMenu">
                                 <mat-icon class="icon-size-5" [svgIcon]="
                                     'heroicons_mini:ellipsis-vertical'
@@ -26,7 +26,7 @@
                                     3 days ago
                                 </button>
                             </mat-menu>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="mt-2 flex flex-col items-center">
                         <div class="text-7xl font-bold leading-none tracking-tight text-blue-500 sm:text-8xl">
@@ -43,7 +43,7 @@
                         <div class="truncate text-lg font-medium leading-6 tracking-tight">
                             Commandes en cours
                         </div>
-                        <div class="-mr-3 -mt-2 ml-2">
+                        <!-- <div class="-mr-3 -mt-2 ml-2">
                             <button mat-icon-button [matMenuTriggerFor]="overdueMenu">
                                 <mat-icon class="icon-size-5" [svgIcon]="
                                     'heroicons_mini:ellipsis-vertical'
@@ -60,7 +60,7 @@
                                     3 days ago
                                 </button>
                             </mat-menu>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="mt-2 flex flex-col items-center">
                         <div class="text-7xl font-bold leading-none tracking-tight text-red-500 sm:text-8xl">
@@ -77,7 +77,7 @@
                         <div class="truncate text-lg font-medium leading-6 tracking-tight">
                             Prochaine échance
                         </div>
-                        <div class="-mr-3 -mt-2 ml-2">
+                        <!-- <div class="-mr-3 -mt-2 ml-2">
                             <button mat-icon-button [matMenuTriggerFor]="issuesMenu">
                                 <mat-icon class="icon-size-5" [svgIcon]="
                                     'heroicons_mini:ellipsis-vertical'
@@ -94,7 +94,7 @@
                                     3 days ago
                                 </button>
                             </mat-menu>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="mt-2 flex flex-col items-center">
                         <div class="text-7xl font-bold leading-none tracking-tight text-amber-500 sm:text-8xl">
@@ -108,7 +108,7 @@
                         <div class="truncate text-lg font-medium leading-6 tracking-tight">
                             Plus de
                         </div>
-                        <div class="-mr-3 -mt-2 ml-2">
+                        <!-- <div class="-mr-3 -mt-2 ml-2">
                             <button mat-icon-button [matMenuTriggerFor]="featuresMenu">
                                 <mat-icon class="icon-size-5" [svgIcon]="
                                     'heroicons_mini:ellipsis-vertical'
@@ -125,7 +125,7 @@
                                     3 days ago
                                 </button>
                             </mat-menu>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="mt-2 flex flex-col items-center">
                         <div class="text-7xl font-bold leading-none tracking-tight text-green-500 sm:text-8xl">
@@ -152,25 +152,19 @@
         </div>
 
 
-        <div class="mt-8 grid w-full grid-cols-1 gap-8 xl:grid-cols-2">
-            <div class="grid gap-8 sm:grid-flow-col xl:grid-flow-row">
-            </div>
-        </div>
-        <div class="mt-6 flex items-center space-x-3 sm:ml-2 sm:mt-0">
-            <button mat-flat-button [color]="'primary'" (click)="toggleCmd()">
-                <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:document'"></mat-icon>
-                <span class="ml-2">
-                    @if(isVentes){
-                    Commandes
-                    }@else{
-                    Bons de livraison
-                    }
-                </span>
-            </button>
+
+        <div class="mt-6 w-full">
+            <mat-tab-group (selectedTabChange)="onTabChange($event)" [selectedIndex]="selectedTabIndex">
+                <mat-tab label="Commandes">
+                    <!-- Content for Commandes tab -->
+                </mat-tab>
+                <mat-tab label="Bons de livraison">
+                    <!-- Content for Bons de livraison tab -->
+                </mat-tab>
+            </mat-tab-group>
         </div>
 
         <div class="mt-8 grid w-full grid-cols-1 gap-8 xl:grid-cols-3">
-            <!-- Commandes table -->
             <div class="bg-card flex flex-auto flex-col overflow-hidden rounded-2xl shadow xl:col-span-12">
                 <div class="mx-6 overflow-x-auto">
                     <table class="w-full bg-transparent" mat-table matSort [dataSource]="commandesDataSource"
@@ -178,7 +172,7 @@
                         <!-- Commande ID -->
                         <ng-container matColumnDef="id">
                             <th mat-header-cell mat-sort-header *matHeaderCellDef>
-                                N° Commande
+                                N°
                             </th>
                             <td mat-cell *matCellDef="let commande">
                                 <span class="text-secondary whitespace-nowrap pr-6 text-sm font-medium">
@@ -260,7 +254,6 @@
                         aria-label="Selectionnez la page de la liste des commandes"></mat-paginator>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
